# abcmidi

./: CMakeLists.txt  genmidi.c  midi2abc.c  parseabc.c  store.c
